fix: backside people list bottom cutoff

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -13,7 +13,7 @@
   --people-list-height: 50vmin;
   --people-list-top: 1vmin;
   --people-list-padding-top: 3.5vmin;
-  --people-list-margin: 10vmin;
+  --people-list-margin: 9.4vmin;
   --people-list-item__box-name-container-left: 10vmin;
 
   --people-selected-effect-bg: url(../assets/faveEffect.png);
